--- a/configs/5kernel_D8_attention_rmnist_RandAug.cfg
+++ b/configs/5kernel_D8_attention_rmnist_RandAug.cfg
@@ -12,23 +12,23 @@ group = D
 kernel_size = 5
 
 [data]
-dataset: MNIST
-directory: data/MNIST
-datamean: 0.1307
-datastd: 0.3081
-num_classes: 10
-imsize: 20
-augment: random rotation
-number_rotations: 36
-scaling: 0.1
-flip: True
+dataset = MNIST
+directory = data/MNIST
+datamean = 0.1307
+datastd = 0.3081
+num_classes = 10
+imsize = 20
+augment = random rotation
+number_rotations = 36
+scaling = 0.1
+flip = True
 
 [training]
 optimizer = Adam
 early_stopping = True
-learning_rate = 1e-5
+learning_rate: 1e-2
 weight_decay = 0
-batch_size = 16
+batch_size = 64
 validation_set_size = 0.2
 epochs = 1000
 save_model = validation update,not during grid_search
