--- a/configs/5kernel_bowles2021_mingolotss_RandAug.cfg
+++ b/configs/5kernel_bowles2021_mingolotss_RandAug.cfg
@@ -18,7 +18,7 @@
   datastd: 0.0455
   num_classes: 2
   imsize: 150
-  augment: restricted random rotation
+  augment: random rotation
   number_rotations: 8
   scaling: 0.1
   flip: True
