--- a/configs/5kernel_D8_attention_mingolotss_RandAug.cfg
+++ b/configs/5kernel_D8_attention_mingolotss_RandAug.cfg
@@ -12,16 +12,16 @@ group = D
 kernel_size = 5
 
 [data]
-dataset: MLFR
-directory: data/mingo
-datamean: 0.0055
-datastd: 0.0455
-num_classes: 2
-imsize: 150
-augment: random rotation
-number_rotations: 8
-scaling: 0.1
-flip: True
+dataset = MLFR
+directory = data/mingo
+datamean = 0.0055
+datastd = 0.0455
+num_classes = 2
+imsize = 150
+augment = random rotation
+number_rotations = 8
+scaling = 0.1
+flip = True
 
 [training]
 optimizer = Adam
@@ -45,7 +45,7 @@ aggregation = False,mean,ft,concat,deep_sup
 
 [final_parameters]
 learning_rate = 1e-5
-validation_set_size =
+validation_set_size = 
 attention_gates = 3
 attention_normalisation = range_norm
 attention_aggregation = ft
@@ -55,3 +55,4 @@ directory = models/bowles2021/mingolotss/5kernel/D8
 training_evaluation = training.csv
 evaluation_out_data = .csv
 model_file = trained_model.pt
+
