--- a/configs/5kernel_D8_attention_rmnist_RandAug.cfg
+++ b/configs/5kernel_D8_attention_rmnist_RandAug.cfg
@@ -10,7 +10,7 @@ attention_aggregation = ft
 number_rotations = 8
 group = D
 kernel_size = 5
-imsize= 28
+imsize = 28
 n_classes = 10
 
 [data]
@@ -27,7 +27,7 @@ flip = True
 [training]
 optimizer = Adam
 early_stopping = True
-learning_rate: 1e-2
+learning_rate = 1e-2
 weight_decay = 0
 batch_size = 32
 validation_set_size = 0.2
@@ -46,7 +46,7 @@ aggregation = False,mean,ft,concat,deep_sup
 
 [final_parameters]
 learning_rate = 1e-5
-validation_set_size =
+validation_set_size = 
 attention_gates = 3
 attention_normalisation = range_norm
 attention_aggregation = ft
@@ -56,3 +56,4 @@ directory = models/bowles2021/rmnist/5kernel/D8
 training_evaluation = training.csv
 evaluation_out_data = .csv
 model_file = trained_model.pt
+
