--- a/configs/9kernel_scaife2021_mirabest_RandAug.cfg
+++ b/configs/9kernel_scaife2021_mirabest_RandAug.cfg
@@ -21,7 +21,7 @@ flip = True
 optimizer = Adam
 early_stopping = True
 learning_rate = 1e-7
-weight_decay = 1e-6
+weight_decay = 0
 batch_size = 16
 validation_set_size = 0.2
 epochs = 1000
