CI: Select full dataset.

--- a/configs/5kernel_C16_attention_mirabest_RandAug.cfg
+++ b/configs/5kernel_C16_attention_mirabest_RandAug.cfg
@@ -12,7 +12,7 @@ group = C
 kernel_size = 5
 
 [data]
-dataset = MBFRUncertain
+dataset = MiraBest_full
 directory = data/mirabest
 datamean = 0.0031
 datastd = 0.0350
