--- a/configs/5kernel_bowles2021_mirabest_RandAug.cfg
+++ b/configs/5kernel_bowles2021_mirabest_RandAug.cfg
@@ -10,7 +10,7 @@ attention_aggregation = ft
 kernel_size = 5
 
 [data]
-dataset = MBFRUncertain
+dataset = MiraBest_full
 directory = data/mirabest
 datamean = 0.0031
 datastd = 0.0350
