--- a/configs/7kernel_scaife2021_mirabest_RandAug.cfg
+++ b/configs/7kernel_scaife2021_mirabest_RandAug.cfg
@@ -6,7 +6,7 @@ base = VanillaLeNet
 kernel_size = 7
 
 [data]
-dataset = MBFRUncertain
+dataset = MiraBest_full
 directory = data/mirabest
 datamean = 0.0031
 datastd = 0.0350
