--- a/configs/5kernel_D16_scaife2021_mirabest_RandAug.cfg
+++ b/configs/5kernel_D16_scaife2021_mirabest_RandAug.cfg
@@ -6,7 +6,7 @@ base = DNSteerableLeNet
 number_rotations = 16
 
 [data]
-dataset = MiraBest_full
+dataset = MBFR
 directory = data/mirabest
 datamean = 0.0031
 datastd = 0.0350
