--- a/configs/5kernel_D4_attention_mirabest_RandAug.cfg
+++ b/configs/5kernel_D4_attention_mirabest_RandAug.cfg
@@ -12,7 +12,7 @@ group = D
 kernel_size = 5
 
 [data]
-dataset = MiraBest_full
+dataset = MBFR
 directory = data/mirabest
 datamean = 0.0031
 datastd = 0.0350
